atualizado rockte-coffe img e borda

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 	<header>
 		<h1>Rocket<span>Coffe</span></h1>
 		<p>Aberto todos os dias. 8h-21h</p>
-
 	</header>
-
+	<button><img class="botao-mobile" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWdwqE0xyobTkz21a_r80OWNypiH4PgtJAl1cqpOSyWDopJiLLrehXywV3MqswZ1vkhGk&usqp=CAU"></button>
 	<section>
 		<h2>Brunch</h2>
 		<ul>
