--- a/index.html
+++ b/index.html
@@ -90,5 +90,43 @@
 			</li>
 		</ul>
 	</section>	
+
+	<section>
+		<h2>comidas</h2>
+		<ul>
+
+			<li>
+				<div class="details">
+					<h3>carne</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Eligendi optio voluptas perspiciatis eius nulla deserunt, porro consequuntur, perferendis dolore </p>
+				</div>
+
+				<strong class="price">
+					R$50,00
+				</strong>
+			</li>
+			<li>
+				<div class="details">
+					<h3>vegetariano</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Eligendi optio voluptas perspiciatis eius nulla deserunt, porro consequuntur, perferendis dolore </p>
+				</div>
+
+				<strong class="price">
+					R$40,50
+				</strong>
+			</li>
+
+			<li>
+				<div class="details">
+					<h3>misto</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Eligendi optio voluptas perspiciatis eius nulla deserunt, porro consequuntur, perferendis dolore </p>
+				</div>
+
+				<strong class="price">
+					R$55,70
+				</strong>
+			</li>
+		</ul>
+	</section>
 </body>
 </html>
